[gd_scene load_steps=4 format=3 uid="uid://br7ewk8qry0e1"]

[ext_resource type="Texture2D" uid="uid://cu18y4rboi0mp" path="res://icon.svg" id="1_5m0no"]
[ext_resource type="Script" path="res://tilesets/traps/dart.gd" id="1_7gpbs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x40bb"]
radius = 13.0

[node name="Dart" type="Area2D"]
z_index = 4
collision_layer = 256
collision_mask = 13
script = ExtResource("1_7gpbs")
move_speed = 500.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.203125, 0.203125)
texture = ExtResource("1_5m0no")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x40bb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
